Change to the navigation tab to have a better position to handle the overflow correctly from the right end of the screen.

--- a/src/navigation/ChangeTheLanguageTab.scss
+++ b/src/navigation/ChangeTheLanguageTab.scss
@@ -3,12 +3,9 @@
 
 @include media-breakpoint-up($grid-breakpoint-md) {
 
-  html {
-    &[lang='fr_CA'], &[lang='fr_EU'] {
-      #languageChanger-dropdown-menu {
-        margin-left: -0.5cm;//TODO change to bootstrap variable
-      }
-    }
+  #languageChanger-dropdown-menu {
+    left: auto;
+    right: var(--bs-spacer-md);
   }
 
 }
